# panmem

./: Cargo.toml  README.md
panmem-desktop/: package.json
panmem-desktop/src-tauri/: Cargo.toml  tauri.conf.json
panmem-domain/: Cargo.toml
panmem-mobile/: README.md  pubspec.yaml
panmem-mobile/android/app/: build.gradle
panmem-mobile/android/app/src/main/: AndroidManifest.xml
panmem-mobile/android/app/src/main/kotlin/studio/pangu/panmem_mobile/: MainActivity.kt
panmem-mobile/ios/Runner/: Info.plist
panmem-mobile/ios/Runner.xcodeproj/: project.pbxproj
panmem-mobile/lib/: main.dart
panmem-mobile/linux/: CMakeLists.txt  my_application.cc
panmem-mobile/macos/Runner.xcodeproj/: project.pbxproj
panmem-mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
panmem-mobile/macos/Runner/Configs/: AppInfo.xcconfig
panmem-mobile/test/: widget_test.dart
panmem-mobile/web/: index.html  manifest.json
panmem-mobile/windows/: CMakeLists.txt
panmem-mobile/windows/runner/: Runner.rc  main.cpp
panmem-shared-lib/: Cargo.toml
